<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ice_surface"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hoodparkhockeyleague.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/title_hphl"
        android:textColor="#E66916"
        android:textSize="62sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/createdby"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#E66916"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="9.0"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnHo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/mybutton"
        android:clickable="true"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:onClick="goToHo"
        android:text="@string/website"
        android:textColor="#E66916"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />
    
    <Button
        android:id="@+id/btnVi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnHo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/mybutton"
        android:clickable="true"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:onClick="goToVi"
        android:text="@string/youtube"
        android:textColor="#E66916"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnSc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnRo"
        android:layout_alignStart="@+id/btnHo"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="@drawable/mybutton"
        android:linksClickable="true"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:onClick="goToSc"
        android:text="@string/schedule"
        android:textColor="#E66916"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnRo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnHo"
        android:layout_below="@+id/btnSc"
        android:layout_marginTop="50dp"
        android:autoLink="web"
        android:background="@drawable/mybutton"
        android:clickable="true"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:onClick="goToRo"
        android:text="@string/ro"
        android:textColor="#E66916"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

</RelativeLayout>
